# pdm-sbom

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
src/pdm_sbom/: __init__.py  cli.py  plugin.py
src/pdm_sbom/core/: __init__.py  abstractions.py  compat.py
src/pdm_sbom/dag/: __init__.py  builder.py  graph.py
src/pdm_sbom/project/: __init__.py  builder.py  dataclasses.py  reader.py  tools.py
src/pdm_sbom/sbom/: __init__.py  base.py  buildinfo.py  cyclonedx.py  data.py  json.py  parser.py  reencoder.py  spdx.py  spdx3.py  tools.py
