[tool]
[tool.pdm]

[project]
name = "pdm-sbom"
version = "0.6.0"
description = "Generate Software Bill of Materials from PDM based projects"
authors = [
    {name = "Carsten Igel", email = "cig@bite-that-bit.de"},
]
dependencies = [
    "pdm>=2.3.4",
    "pyproject-metadata>=0.6.1",
    "tomli>=2.0.1; python_version<='3.10'",
    "resolvelib>=0.9.0",
    "packaging>=21.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.license-files]
paths = [
    "LICENSE",
]

[project.optional-dependencies]
cyclonedx = [
    "cyclonedx-bom>=3.10.1",
    "packageurl-python>=0.10.4",
]
spdx = [
    "packageurl-python>=0.10.4",
    #    "spdx-tools @ git+https://github.com/spdx/tools-python.git@v0.7.0",
    "spdx-tools @ git+https://github.com/spdx/tools-python.git@v0.7.0",
]

[project.entry-points.pdm]
pdm-sbom = "pdm_sbom:main"


[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
