[project]
name = "pdm-sbom"
version = "0.9.0.post1"
description = "Generate Software Bill of Materials from PDM based projects"
authors = [
    { name = "Carsten Igel", email = "cig@bite-that-bit.de" },
]
dependencies = [
    "pdm>=2.3.4",
    "pyproject-metadata>=0.6.1",
    "resolvelib>=0.9.0",
    "packaging>=21.3",
    "pdm-pfsc>=0.11.3",
    "packageurl-python>=0.15.0",
]
requires-python = ">=3.11"
readme = "README.md"

[project.license]
text = "MIT"

[project.license-files]
paths = [
    "LICENSE",
]

[project.urls]
homepage = "https://github.com/carstencodes/pdm-sbom"

[project.optional-dependencies]
cyclonedx = [
    "cyclonedx-bom>=3.10.1",
]
spdx = [
    "spdx-tools>=0.7.0",
]
buildinfo = [
    "buildinfo-om>=0.6.0",
]
spdx3 = [
    "spdx-tools>=0.8.2",
    "pyshacl>=0.25.0",
    "semantic-version>=2.10.0",
]

[project.entry-points.pdm]
pdm-sbom = "pdm_sbom:main"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
plugins = [
    "-e file:///${PROJECT_ROOT}",
    "pdm-bump",
    "pdm-audit",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "tox>=3.25.1",
    "tox-pdm>=0.6.0",
    "pytest-cov>=3.0.0",
]
formatting = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "licenseheaders>=0.8.8",
    "autoflake>=2.0.2",
    "pyment>=0.3.3",
]
release = [
    "gitlint>=0.17.0",
    "pip-audit>=2.4.4",
]
static-code-analysis = [
    "radon>=5.1.0",
    "vulture>=2.7",
    "bandit>=1.7.4",
    "prospector>=0.12.2",
]
checkstyle = [
    "flake8>=3.9.2",
    "flake518>=1.2.3",
    "mypy>=0.971",
    "pylint>=2.14.5",
    "pycodestyle>=2.7.0",
    "pep8-naming>=0.13.3",
]

[tool.pdm.scripts]
flake = "flake518 src/"
mypy = "mypy src/"
pylint = "pylint src/"
isort = "isort src/"
black = "black src/"
unimport = "unimport src/"
autoflake = "autoflake --ignore-pass-statements --remove-all-unused-imports --in-place --recursive src"
radon_cc = "radon cc --total-average --show-complexity --json --output-file radon.cc.json src/"
radon_mi = "radon mi --show --json --output-file radon.mi.json src/"
radon_hal = "radon hal --functions --json --output-file radon.hal.json src/"
vulture = "vulture src/"
bandit = "bandit src/"
prospector = "prospector src/"
editorconfig = "echo '<EC Checker Not Configured>'"
copyright-headers = "licenseheaders -y 2021-2024 -o 'Carsten Igel' -n pdm-bump -d . -u https://github.com/carstencodes/pdm-sbom -t ./.licenseheader.j2 -E .py"

[tool.pdm.scripts.check-style]
composite = [
    "editorconfig",
    "flake",
#    "pylint",
    "mypy",
]

[tool.pdm.scripts.format]
composite = [
    "copyright-headers",
    "isort",
    "black",
    "autoflake",
]

[tool.pdm.scripts.radon]
composite = [
    "radon_cc",
    "radon_mi",
    "radon_hal",
]

[tool.pdm.scripts.static-analysis]
composite = [
    "radon",
    "vulture",
    "bandit",
    "prospector",
]

[tool.pdm.scripts.check-commits]
shell = "gitlint --commits $(git describe --tags --abbrev=0)..HEAD lint"

[tool.black]
line-length = 79
target-version = [
    "py39",
]

[tool.pylint.MAIN]
fail-under = 9
ignore = "vcs"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0112",
    "R0901",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
junit_suite_name = "pdm-bump"
pythonpath = [
    "src",
]
minversion = "7.0.0"
addopts = [
    "--cache-clear",
    "--junit-xml",
    "pytest.result.xml",
    "--cov=src",
    "--cov-branch",
    "--cov-report",
    "xml:pytest.coverage.xml",
    "--cov-report",
    "term",
]
filterwarnings = [
    "ignore::DeprecationWarning ",
]

[tool.tox]
legacy_tox_ini = "[tox]\nminversion = 3.25.0\nrequires = tox-pdm\nskip_missing_interpreters = false\nenvlist = py{39, 310, 311, 312}\nisolated_build = true\nskipsdist = true\n\n\n[testenv]\nsetenv =\n    PDM_IGNORE_SAVED_PYTHON=\"1\"\nallowlist_externals =\n    mv\n    mkdir\n    pytest\n    pdm\n    python\ndeps = pdm\nrecreate = true\npassenv =\n    PYTHONPATH\ncommands =\n    pdm install --dev\n    pytest\ncommands_pre =\n    mkdir -p {toxinidir}/results/{envname}\ncommands_post =\n    mv {toxinidir}/pytest.result.xml {toxinidir}/pytest.coverage.xml {toxinidir}/results/{envname}/\n"

[tool.git-cliff.changelog]
header = "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\n"
body = "{% if version %}##  Changelog for release {{ version | trim_start_matches(pat=\"v\") }}\n{% else %}## [unreleased]\n{% endif %}Released on {{ timestamp | date(format=\"%Y-%m-%d\") }}\n\n{% for group, commits in commits | group_by(attribute=\"group\") %}\n    ### {{ group | upper_first }}\n    {% for commit in commits %}\n        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }} by {{ commit.author.name }} [{{ commit.id| truncate(length=7, end=\"\")}}](https://github.com/carstencodes/pdm-sbom/commit/{{ commit.id }}){% endfor %}\n{% endfor %}\n\n{% if version %}{% if previous %}**Full changelog**: [{{ previous.version }}...{{ version }}](https://github.com/carstencodes/pdm-sbom/compare/{{ previous.version }}...{{ version }})\n{% endif %}\n\n{% endif %}"
trim = true
footer = "<!-- generated by git-cliff -->\n"

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^docs", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactored" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^qa", group = "Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^ci", group = "Integration Tasks" },
    { message = "^build", group = "Build recipes" },
    { message = "^chore", group = "Miscellaneous Tasks" },
    { body = ".*security", group = "Security" },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "v[0-9]*"
skip_tags = "v0.1.0-beta.1"
ignore_tags = ""
date_order = false
sort_commits = "oldest"

[[tool.git-cliff.git.commit_preprocessors]]
pattern = "\\((\\w+\\s)?#([0-9]+)\\)"
replace = "([#${2}](https://github.com/orhun/git-cliff/issues/${2}))"

